--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
-    "web3": "^1.0.0-beta.23",
+    "web3": "^0.14.0",
     "web3-redux": "^0.5.2"
   },
   "scripts": {
