--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "concurrently": "^3.5.0",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.0",
@@ -49,24 +50,39 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "ethereumjs-testrpc": "^4.1.3",
+    "geth": "^0.4.0",
     "lodash": "^4.17.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "web3": "^0.14.0",
-    "web3-redux": "^0.5.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "truffle": "^3.4.11",
+    "web3": "^0.14.0",
+    "web3-redux": "^0.5.2"
   },
   "scripts": {
-    "preinstall": "react-scripts scripts/preinstall.sh",
-    "start": "react-scripts scripts/testrpc.sh && truffle migrate && node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "start": "concurrently --kill-others \"geth --rpc --testnet --rpccorsdomain=*\" \"react-scripts start\"",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "description": "React App using the Ethereum blockchain",
+  "directories": {
+    "test": "test"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -99,24 +115,13 @@
       "web.jsx",
       "jsx"
     ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "description": "React App using the Ethereum blockchain",
-  "directories": {
-    "test": "test"
-  },
+  },  
   "keywords": [
     "react",
+    "redux",
     "ethereum",
     "dapp",
-    "truffle",
-    "testrpc"
+    "web3",
+    "truffle"
   ]
 }
