--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.7",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
     "redux-thunk": "^2.2.0",
@@ -67,7 +67,7 @@
     "web3-redux": "^0.5.2"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"geth --rpc --light --testnet --rpccorsdomain=*\" \"react-scripts start\"",
+    "start": "concurrently --kill-others \"geth --rpc --fast --testnet --rpccorsdomain=*\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
